--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<script src="script.js"></script>
 </head>
 <body>
@@ -20,5 +21,8 @@
 			</ul>
 		</div>
 	</header>
+	<div class="down-arrow">
+		<i class="fas fa-tree down-arrow__icon" id="down-arrow"></i>
+	</div>
 </body>
 </html>
