add home screen

--- a/index.html
+++ b/index.html
@@ -21,8 +21,22 @@
 			</ul>
 		</div>
 	</header>
+	<div class="home-screen">
+		<div class="case-logo">
+			<img id="logo" src="./img/logo_leonoel_ia.jpg" alt="Logo LeoNoel">
+		</div>
+		<div class="text-welcome">
+			<p id="title">LéoNoël </p>
+			<p id="subtitle">Eveillez la magie de Noël pièce par pièce</p>
+		</div>
+	</div>
 	<div class="down-arrow">
-		<i class="fas fa-tree down-arrow__icon" id="down-arrow"></i>
+		<!-- <a href="#history"> -->
+			<i class="fas fa-tree down-arrow__icon" id="down-arrow"></i>
+		<!-- </a> -->
+	</div>
+	<div id="history">
+
 	</div>
 </body>
 </html>
