--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 		</div>
 	</div>
 	<div class="down-arrow">
-		<!-- <a href="#history"> -->
+		<a href="#history">
 			<i class="fas fa-tree down-arrow__icon" id="down-arrow"></i>
-		<!-- </a> -->
+		</a>
 	</div>
 	<div id="history">
 
