Co-authored-by: MIGNOT Raphaël <raphael.mignot@edu.devinci.fr>

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<header>
 		<div class="nav-bar">
 			<ul class="nav">
+				<li><a id="to-products">Nos produits</a></li>
+				<li><a id="to-team">Équipe</a></li>
 				<li><a id="to-history">Notre histoire</a></li>
-				<li><a href="">Équipe</a></li>
-				<li><a href="">Nos produits</a></li>
-				<li><a href="">Contact</a></li>
+				<li><a id="to-contact">Contact</a></li>
 			</ul>
 		</div>
 	</header>
@@ -35,7 +35,12 @@
 	<div class="down-arrow">
 		<i class="fas fa-tree down-arrow__icon" id="down-arrow"></i>
 	</div>
-
+	<div class="products">
+		<div class="grid">
+			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt=""><img src="./img/product_tree.png" class="img_product" alt=""><p>Sapin de Noël</p></div>
+			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt=""><img src="./img/product_tree.png" class="img_product" id="in-creation" alt=""><p>En création</p></div>
+		</div>
+	</div>
 	<div class="history">
 		<div class="history-title"><p id="history-title">Notre histoire</p></div>
 		<div class="history-text" id="history-text">
