--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	<link rel="icon" type="image/png" href="./img/logo_leonoel_round.png">
 </head>
 
 <body>
@@ -29,24 +30,115 @@
 		</div>
 		<div class="text-welcome">
 			<p id="title">LéoNoël </p>
-			<p id="subtitle">Eveillez la magie de Noël pièce par pièce</p>
+			<p id="subtitle">Eveillez la magie de Noël pièce par pièce !</p>
 		</div>
 	</div>
-	<div class="down-arrow">
-		<i class="fas fa-tree down-arrow__icon" id="down-arrow"></i>
+	<div class="down-arrow-to-products">
+		<i class="fas fa-tree down-arrow__icon" id="down-arrow-to-products"></i>
 	</div>
 	<div class="products">
+		<div class="products-title">
+			<p id="products-title">Nos produits</p>
+		</div>
 		<div class="grid">
-			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt=""><img src="./img/product_tree.png" class="img_product" alt=""><p>Sapin de Noël</p></div>
-			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt=""><img src="./img/product_tree.png" class="img_product" id="in-creation" alt=""><p>En création</p></div>
+			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt=""><img
+					src="./img/product_tree.png" class="img_product" alt="">
+				<p>Sapin de Noël</p>
+			</div>
+			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt=""><img
+					src="./img/product_tree.png" class="img_product" id="in-creation" alt="">
+				<p>En création</p>
+			</div>
+		</div>
+	</div>
+	<div class="down-arrow-to-team">
+		<i class="fas fa-tree down-arrow__icon-to-team" id="down-arrow-to-team"></i>
+	</div>
+	<div class="team">
+		<div class="team-title">
+			<p id="team-title">Notre équipe</p>
+		</div>
+		<div class="team-grid">
+			<div class="leonie">
+				<section class="hidden">
+					<div class="profil">
+						<img src="./img/leonie_pp_round.png" alt="Photo Profil Léonie">
+						<h1>Léonie</h1>
+					</div>
+					<div class="description-team">
+						<p>Ouvrez un dictionnaire au mot « sourire » et vous trouverez Léonie. Son dynamisme contagieux
+							illumine chaque projet. Spécialiste dans la gestion et l’administration, Léonie marie avec brio
+							sérieux et rigueur dans toutes ses missions. Son autonomie et sa prise d'initiative hors pair ne
+							donnent aucune chance aux mails et à la paperasse. Avec une organisation digne de ce nom notre
+							équipe est sûre de tendre vers la réussite. Avec elle, chaque projet devient une aventure
+							prometteuse et fructueuse. Une véritable manager qui transforme les défis en opportunités. </p>
+						<h3>« Cela semble toujours impossible, jusqu’à ce qu’on le fasse ». Nelson Mandela</h3>
+					</div>
+				</section>
+			</div>
+			<div class="antonin">
+				<section class="hidden">
+					<div class="description-team">
+						<p>Lui c’est Antonin, une véritable pépite au sein de notre équipe ! Il incarne la quintessence du
+							professionnalisme, de la rigueur, et de la détermination. Sa maîtrise de l'informatique en fait
+							un atout majeur, et son talent en graphisme ouvre de nouvelles perspectives créatives. Toujours
+							prêt à comprendre et à surpasser les attentes, Antonin est le collaborateur idéal pour mener
+							notre équipe vers l'excellence. Sa polyvalence et son engagement font de lui une force motrice,
+							prêt à surmonter tous les obstacles pour atteindre l'excellence. Avec Anto à nos côtés,
+							l'innovation et la réussite sont assurées ! </p>
+							<h3>“Je ne perds jamais, soit je gagne, soit j’apprends », Nelson Mandela.</h3>
+						</div>
+						<div class="profil">
+							<img src="./img/pp_anto_round.png" alt="Photo profil Antonin">
+							<h1>Antonin</h1>
+						</div>
+				</section>
+			</div>
+			<div class="raphael">
+				<section class="hidden">
+					<div class="profil">
+						<img src="./img/pp_anto_round.png" alt="Photo profil Antonin">
+						<h1>Raphaël</h1>
+					</div>
+					<div class="description-team">
+						<p>Découvrez Raphaël, notre atout secret et associé exceptionnel. Sérieux et rigoureux, il gère la
+							modélisation comme personne, et apporte une compréhension technique à chacun de ses projets.
+							Mêlant mystère et professionnalisme, Raphaël excelle dans la discrétion tout en accomplissant
+							avec aisance toutes les tâches qui lui sont confiées. Sa réputation de résoudre sans prise de
+							tête les défis informatiques en fait un précieux collaborateur. Doté d'une capacité remarquable
+							à concrétiser les demandes, il se distingue par sa fiabilité et son dévouement exemplaire. En
+							tant qu'associé, il incarne l'excellence discrète qui donne à notre équipe une longueur
+							d'avance. Confiez-lui vos projets et découvrez la puissance de la discrétion alliée à un
+							professionnalisme inégalé. </p>
+						<h3>« La folie, c’est de faire toujours la même chose et de s’attendre à un résultat différent »Albert Einstein</h3>
+					</div>
+				</section>
+			</div>
 		</div>
 	</div>
 	<div class="history">
-		<div class="history-title"><p id="history-title">Notre histoire</p></div>
-		<div class="history-text" id="history-text">
-			<p id="p1">Au cœur d'un petit village enneigé vivait une famille d'artistes de Noël, maîtres dans la fabrication de puzzles enchanteurs. Le Père Noël dirigeait avec sagesse cet atelier magique où régnait la Mère Flocon, douée d'une créativité sans bornes. Le jeune Léo, passionné par Noël, découpait avec précision chaque pièce, vibrant à l'idée de partager la magie des fêtes. Pendant ce temps, dans un village voisin, des enfants désœuvrés rêvaient d'un Noël avec des cadeaux et un sapin.</p>
-			<p id="p2">Touché, Léo décida de leur apporter la magie de Noël avec ses créations. Le jour du réveillon, les enfants s'émerveillèrent devant les puzzles offerts par Léo, répandant ainsi la magie de Noël dans tout le village. Une tradition est née : chaque Noël, les enfants choisissaient un puzzle pour célébrer la magie de Noël, perpétuant ainsi l'héritage de la famille Noël, qui, année après année, entretenait la magie de Noël.</p>
+		<div class="history-title">
+			<p id="history-title">Notre histoire</p>
 		</div>
+		<div class="history-text" id="history-text">
+			<p id="p1">Au cœur d'un petit village enneigé vivait une famille d'artistes de Noël, maîtres dans la
+				fabrication de puzzles enchanteurs. Le Père Noël dirigeait avec sagesse cet atelier magique où régnait
+				la Mère Flocon, douée d'une créativité sans bornes. Le jeune Léo, passionné par Noël, découpait avec
+				précision chaque pièce, vibrant à l'idée de partager la magie des fêtes. Pendant ce temps, dans un
+				village voisin, des enfants désœuvrés rêvaient d'un Noël avec des cadeaux et un sapin.</p>
+			<p id="p2">Touché, Léo décida de leur apporter la magie de Noël avec ses créations. Le jour du réveillon,
+				les enfants s'émerveillèrent devant les puzzles offerts par Léo, répandant ainsi la magie de Noël dans
+				tout le village. Une tradition est née : chaque Noël, les enfants choisissaient un puzzle pour célébrer
+				la magie de Noël, perpétuant ainsi l'héritage de la famille Noël, qui, année après année, entretenait la
+				magie de Noël.</p>
+		</div>
+	</div>
+	<div class="down-arrow-to-history">
+		<i class="fas fa-tree down-arrow__icon-to-history" id="down-arrow-to-history"></i>
+	</div>
+	<div class="contacts">
+		<div class="contacts-title"></div>
+
 	</div>
 	<script src="script.js"></script>
 </body>
