--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<div class="raphael">
 				<section class="hidden">
 					<div class="profil">
-						<img src="./img/pp_anto_round.png" alt="Photo profil Antonin">
+						<img src="./img/pp_raph_round.png" alt="Photo profil Antonin">
 						<h1>Raphaël</h1>
 					</div>
 					<div class="description-team">
