footer + social links + back sections team

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 				<li><a id="to-products">Nos produits</a></li>
 				<li><a id="to-team">Équipe</a></li>
 				<li><a id="to-history">Notre histoire</a></li>
-				<li><a id="to-contact">Contact</a></li>
+				<li><a id="to-contact" href="#footer">Contact</a></li>
 			</ul>
 		</div>
 	</header>
 
-	<div class="home-screen">
+	<div class="home-screen" id="home-screen">
 		<div class="case-logo">
 			<img id="logo" src="./img/logo_leonoel_ia.jpg" alt="Logo LeoNoel">
 		</div>
@@ -36,7 +36,7 @@
 	<div class="down-arrow-to-products">
 		<i class="fas fa-tree down-arrow__icon" id="down-arrow-to-products"></i>
 	</div>
-	<div class="products">
+	<div class="products" id="products">
 		<div class="products-title">
 			<p id="products-title">Nos produits</p>
 		</div>
@@ -54,7 +54,7 @@
 	<div class="down-arrow-to-team">
 		<i class="fas fa-tree down-arrow__icon-to-team" id="down-arrow-to-team"></i>
 	</div>
-	<div class="team">
+	<div class="team" id="team">
 		<div class="team-title">
 			<p id="team-title">Notre équipe</p>
 		</div>
@@ -67,11 +67,15 @@
 					</div>
 					<div class="description-team">
 						<p>Ouvrez un dictionnaire au mot « sourire » et vous trouverez Léonie. Son dynamisme contagieux
-							illumine chaque projet. Spécialiste dans la gestion et l’administration, Léonie marie avec brio
-							sérieux et rigueur dans toutes ses missions. Son autonomie et sa prise d'initiative hors pair ne
-							donnent aucune chance aux mails et à la paperasse. Avec une organisation digne de ce nom notre
+							illumine chaque projet. Spécialiste dans la gestion et l’administration, Léonie marie avec
+							brio
+							sérieux et rigueur dans toutes ses missions. Son autonomie et sa prise d'initiative hors
+							pair ne
+							donnent aucune chance aux mails et à la paperasse. Avec une organisation digne de ce nom
+							notre
 							équipe est sûre de tendre vers la réussite. Avec elle, chaque projet devient une aventure
-							prometteuse et fructueuse. Une véritable manager qui transforme les défis en opportunités. </p>
+							prometteuse et fructueuse. Une véritable manager qui transforme les défis en opportunités.
+						</p>
 						<h3>« Cela semble toujours impossible, jusqu’à ce qu’on le fasse ». Nelson Mandela</h3>
 					</div>
 				</section>
@@ -79,19 +83,23 @@
 			<div class="antonin">
 				<section class="hidden">
 					<div class="description-team">
-						<p>Lui c’est Antonin, une véritable pépite au sein de notre équipe ! Il incarne la quintessence du
-							professionnalisme, de la rigueur, et de la détermination. Sa maîtrise de l'informatique en fait
-							un atout majeur, et son talent en graphisme ouvre de nouvelles perspectives créatives. Toujours
+						<p>Lui c’est Antonin, une véritable pépite au sein de notre équipe ! Il incarne la quintessence
+							du
+							professionnalisme, de la rigueur, et de la détermination. Sa maîtrise de l'informatique en
+							fait
+							un atout majeur, et son talent en graphisme ouvre de nouvelles perspectives créatives.
+							Toujours
 							prêt à comprendre et à surpasser les attentes, Antonin est le collaborateur idéal pour mener
-							notre équipe vers l'excellence. Sa polyvalence et son engagement font de lui une force motrice,
+							notre équipe vers l'excellence. Sa polyvalence et son engagement font de lui une force
+							motrice,
 							prêt à surmonter tous les obstacles pour atteindre l'excellence. Avec Anto à nos côtés,
 							l'innovation et la réussite sont assurées ! </p>
-							<h3>“Je ne perds jamais, soit je gagne, soit j’apprends », Nelson Mandela.</h3>
-						</div>
-						<div class="profil">
-							<img src="./img/pp_anto_round.png" alt="Photo profil Antonin">
-							<h1>Antonin</h1>
-						</div>
+						<h3>“Je ne perds jamais, soit je gagne, soit j’apprends », Nelson Mandela.</h3>
+					</div>
+					<div class="profil">
+						<img src="./img/pp_anto_round.png" alt="Photo profil Antonin">
+						<h1>Antonin</h1>
+					</div>
 				</section>
 			</div>
 			<div class="raphael">
@@ -101,22 +109,28 @@
 						<h1>Raphaël</h1>
 					</div>
 					<div class="description-team">
-						<p>Découvrez Raphaël, notre atout secret et associé exceptionnel. Sérieux et rigoureux, il gère la
+						<p>Découvrez Raphaël, notre atout secret et associé exceptionnel. Sérieux et rigoureux, il gère
+							la
 							modélisation comme personne, et apporte une compréhension technique à chacun de ses projets.
-							Mêlant mystère et professionnalisme, Raphaël excelle dans la discrétion tout en accomplissant
-							avec aisance toutes les tâches qui lui sont confiées. Sa réputation de résoudre sans prise de
-							tête les défis informatiques en fait un précieux collaborateur. Doté d'une capacité remarquable
-							à concrétiser les demandes, il se distingue par sa fiabilité et son dévouement exemplaire. En
+							Mêlant mystère et professionnalisme, Raphaël excelle dans la discrétion tout en
+							accomplissant
+							avec aisance toutes les tâches qui lui sont confiées. Sa réputation de résoudre sans prise
+							de
+							tête les défis informatiques en fait un précieux collaborateur. Doté d'une capacité
+							remarquable
+							à concrétiser les demandes, il se distingue par sa fiabilité et son dévouement exemplaire.
+							En
 							tant qu'associé, il incarne l'excellence discrète qui donne à notre équipe une longueur
 							d'avance. Confiez-lui vos projets et découvrez la puissance de la discrétion alliée à un
 							professionnalisme inégalé. </p>
-						<h3>« La folie, c’est de faire toujours la même chose et de s’attendre à un résultat différent »Albert Einstein</h3>
+						<h3>« La folie, c’est de faire toujours la même chose et de s’attendre à un résultat
+							différent »Albert Einstein</h3>
 					</div>
 				</section>
 			</div>
 		</div>
 	</div>
-	<div class="history">
+	<div class="history" id="history">
 		<div class="history-title">
 			<p id="history-title">Notre histoire</p>
 		</div>
@@ -140,6 +154,41 @@
 		<div class="contacts-title"></div>
 
 	</div>
+	<footer class="footer" id="footer">
+		<div class="social">
+			<div class="social-leonie">
+				<ul class="social-icon">
+					<li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/in/léonie-chapelle-44a651234/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+					<li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/leonie_chapelle/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+				</ul>
+				<p>Léonie</p>
+			</div>
+			<div class="social-antonin">
+				<ul class="social-icon">
+					<li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/in/antonin-biron-748058155/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+					<li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/its_anto.brn/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+					<li class="social-icon__item"><a class="social-icon__link" href="https://github.com/Blatahead" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+				</ul>
+				<p>Antonin</p>
+			</div>
+			<div class="social-raphael">
+				<ul class="social-icon">
+					<!-- <li class="social-icon__item"><a class="social-icon__link" href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li> -->
+					<li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/rafmy0/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+				</ul>
+				<p>Raphaël</p>
+			</div>
+		</div>
+		<ul class="menu">
+			<li class="menu__item"><a class="menu__link" href="#top">Accueil</a></li>
+			<li class="menu__item"><a class="menu__link" href="#products">Produits</a></li>
+			<li class="menu__item"><a class="menu__link" href="#team">Equipe</a></li>
+			<li class="menu__item"><a class="menu__link" href="#history">Histoire</a></li>
+		</ul>
+		<p>&copy;2024 Antonin Biron | LéoNoël | All Rights Reserved</p>
+	</footer>
+	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 	<script src="script.js"></script>
 </body>
 
