--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	<header>
 		<div class="nav-bar">
 			<ul class="nav">
-				<li><a id="to-products">Nos produits</a></li>
-				<li><a id="to-team">Équipe</a></li>
-				<li><a id="to-history">Notre histoire</a></li>
-				<li><a id="to-contact" href="#footer">Contact</a></li>
+				<li><a href="#products">Nos produits</a></li>
+				<li><a href="#team">Équipe</a></li>
+				<li><a href="#history">Notre histoire</a></li>
+				<li><a href="#footer">Contact</a></li>
 			</ul>
 		</div>
 	</header>
@@ -50,9 +50,9 @@
 				<p>En création</p>
 			</div>
 		</div>
-	</div>
-	<div class="down-arrow-to-team">
-		<i class="fas fa-tree down-arrow__icon-to-team" id="down-arrow-to-team"></i>
+		<div class="down-arrow-to-team">
+			<i class="fas fa-tree down-arrow__icon-to-team" id="down-arrow-to-team"></i>
+		</div>
 	</div>
 	<div class="team" id="team">
 		<div class="team-title">
@@ -129,6 +129,9 @@
 				</section>
 			</div>
 		</div>
+		<div class="down-arrow-to-history">
+			<i class="fas fa-tree down-arrow__icon-to-history" id="down-arrow-to-history"></i>
+		</div>
 	</div>
 	<div class="history" id="history">
 		<div class="history-title">
@@ -147,12 +150,8 @@
 				magie de Noël.</p>
 		</div>
 	</div>
-	<div class="down-arrow-to-history">
-		<i class="fas fa-tree down-arrow__icon-to-history" id="down-arrow-to-history"></i>
-	</div>
 	<div class="contacts">
 		<div class="contacts-title"></div>
-
 	</div>
 	<footer class="footer" id="footer">
 		<div class="social">
