--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
 <body>
 	<header>
 		<div class="nav-bar">
+			<div class="burger-menu">
+				<span class="burger-line"></span>
+				<span class="burger-line"></span>
+				<span class="burger-line"></span>
+			</div>
 			<ul class="nav">
 				<li><a href="#products">Nos produits</a></li>
 				<li><a href="#team">Équipe</a></li>
 				<li><a href="#history">Notre histoire</a></li>
 				<li><a href="#footer">Contact</a></li>
 			</ul>
-		</div>
+		</div>		
 	</header>
 
 	<div class="home-screen" id="home-screen">
@@ -178,6 +183,12 @@
 				<p>Raphaël</p>
 			</div>
 		</div>
+		<div class="social-team">
+			<ul class="social-icon">
+				<li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/rafmy0/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+			</ul>
+			<p>LéoNoël</p>
+		</div>
 		<ul class="menu">
 			<li class="menu__item"><a class="menu__link" href="#top">Accueil</a></li>
 			<li class="menu__item"><a class="menu__link" href="#products">Produits</a></li>
@@ -186,9 +197,10 @@
 		</ul>
 		<p>&copy;2024 Antonin Biron | LéoNoël | All Rights Reserved</p>
 	</footer>
+	<iframe src="https://leonoel.retool.com/apps/Title%20your%20first%20app" width="100%" height="800px"></iframe>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 	<script src="script.js"></script>
 </body>
 
 </html>
+
