--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
 	<header>
 		<div class="nav-bar">
-			<div class="burger-menu">
+			<div class="burger-menu" onclick="BurgerTranslate()">
 				<span class="burger-line"></span>
 				<span class="burger-line"></span>
 				<span class="burger-line"></span>
 			</div>
-			<ul class="nav">
+			<ul class="navbar-nav" id="navbar-nav">
 				<li><a href="#products">Nos produits</a></li>
 				<li><a href="#team">Équipe</a></li>
 				<li><a href="#history">Notre histoire</a></li>
