closing nav when clicking

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 				<span class="burger-line"></span>
 			</div>
 			<ul class="navbar-nav" id="navbar-nav">
-				<li><a href="#products">Nos produits</a></li>
-				<li><a href="#team">Équipe</a></li>
-				<li><a href="#history">Notre histoire</a></li>
-				<li><a href="#footer">Contact</a></li>
+				<li><a href="#products" onclick="CloseNavBar()">Nos produits</a></li>
+				<li><a href="#team" onclick="CloseNavBar()">Équipe</a></li>
+				<li><a href="#history" onclick="CloseNavBar()">Notre histoire</a></li>
+				<li><a href="#footer" onclick="CloseNavBar()">Contact</a></li>
 			</ul>
 		</div>		
 	</header>
