pre command buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<li><a href="#history" onclick="CloseNavBar()">Notre histoire</a></li>
 				<li><a href="#footer" onclick="CloseNavBar()">Contact</a></li>
 			</ul>
-		</div>		
+		</div>
 	</header>
 
 	<div class="home-screen" id="home-screen">
@@ -46,12 +46,14 @@
 			<p id="products-title">Nos produits</p>
 		</div>
 		<div class="grid">
-			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt=""><img
-					src="./img/product_tree.png" class="img_product" alt="">
+			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt="">
+				<img src="./img/product_tree.png" class="img_product" alt="">
+				<button class="button-67" role="button">Pré commander</button>
 				<p>Sapin de Noël</p>
 			</div>
 			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt=""><img
 					src="./img/product_tree.png" class="img_product" id="in-creation" alt="">
+				<button class="button-67" role="button">Pré commander</button>
 				<p>En création</p>
 			</div>
 		</div>
@@ -162,30 +164,41 @@
 		<div class="social">
 			<div class="social-leonie">
 				<ul class="social-icon">
-					<li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/in/léonie-chapelle-44a651234/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-					<li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/leonie_chapelle/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+					<li class="social-icon__item"><a class="social-icon__link"
+							href="https://www.linkedin.com/in/léonie-chapelle-44a651234/" target="_blank"><ion-icon
+								name="logo-linkedin"></ion-icon></a></li>
+					<li class="social-icon__item"><a class="social-icon__link"
+							href="https://www.instagram.com/leonie_chapelle/" target="_blank"><ion-icon
+								name="logo-instagram"></ion-icon></a></li>
 				</ul>
 				<p>Léonie</p>
 			</div>
 			<div class="social-antonin">
 				<ul class="social-icon">
-					<li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/in/antonin-biron-748058155/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-					<li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/its_anto.brn/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
-					<li class="social-icon__item"><a class="social-icon__link" href="https://github.com/Blatahead" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+					<li class="social-icon__item"><a class="social-icon__link"
+							href="https://www.linkedin.com/in/antonin-biron-748058155/" target="_blank"><ion-icon
+								name="logo-linkedin"></ion-icon></a></li>
+					<li class="social-icon__item"><a class="social-icon__link"
+							href="https://www.instagram.com/its_anto.brn/" target="_blank"><ion-icon
+								name="logo-instagram"></ion-icon></a></li>
+					<li class="social-icon__item"><a class="social-icon__link" href="https://github.com/Blatahead"
+							target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
 				</ul>
 				<p>Antonin</p>
 			</div>
 			<div class="social-raphael">
 				<ul class="social-icon">
 					<!-- <li class="social-icon__item"><a class="social-icon__link" href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li> -->
-					<li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/rafmy0/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+					<li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/rafmy0/"
+							target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
 				</ul>
 				<p>Raphaël</p>
 			</div>
 		</div>
 		<div class="social-team">
 			<ul class="social-icon">
-				<li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/rafmy0/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+				<li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/rafmy0/"
+						target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
 			</ul>
 			<p>LéoNoël</p>
 		</div>
@@ -203,4 +216,3 @@
 </body>
 
 </html>
-
