--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital@0;1&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<link rel="icon" type="image/png" href="./img/logo_leonoel_round.png">
 </head>
@@ -48,12 +49,21 @@
 		<div class="grid">
 			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt="">
 				<img src="./img/product_tree.png" class="img_product" alt="">
-				<button class="button-67" role="button">Pré commander</button>
+				<!-- <button id="button-tree" class="button-67" role="button">Pré commander</button> -->
+				<div id="embed-container" class="embed-container">
+					<div class="embed" data-tf-live="01HS743ZN3N6HP2GG3ZPPBW7JZ"></div>
+					<script src="//embed.typeform.com/next/embed.js"></script>
+				</div>
 				<p>Sapin de Noël</p>
 			</div>
 			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt=""><img
 					src="./img/product_tree.png" class="img_product" id="in-creation" alt="">
-				<button class="button-67" role="button">Pré commander</button>
+				<!-- <button class="button-67" role="button">Pré commander</button> -->
+				<p>En création</p>
+			</div>
+			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt=""><img
+					src="./img/product_tree.png" class="img_product" id="in-creation" alt="">
+				<!-- <button class="button-67" role="button">Pré commander</button> -->
 				<p>En création</p>
 			</div>
 		</div>
@@ -210,6 +220,7 @@
 		</ul>
 		<p>&copy;2024 Antonin Biron | LéoNoël | All Rights Reserved</p>
 	</footer>
+	
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 	<script src="script.js"></script>
