3D view christmas tree

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
 		<div class="grid">
 			<div class="card"><img src="./img/logo_leonoel_ia.jpg" class="logo_product" alt="">
 				<img src="./img/product_tree.png" class="img_product" alt="">
+				<div id="popup" class="popup">
+					<span class="close" onclick="closePopup()">&times;</span>
+					<div class="sketchfab-embed-wrapper"> 
+						<iframe title="ChristmasTree" frameborder="0" allowfullscreen
+							mozallowfullscreen="true" webkitallowfullscreen="true"
+							allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
+							execution-while-out-of-viewport execution-while-not-rendered web-share
+							src="https://sketchfab.com/models/11e6289058a74dc4951ce481c0c31314/embed"> 
+						</iframe>
+					</div>
+				</div>
 				<div id="embed-container" class="embed-container">
 					<div class="embed" data-tf-live="01HS743ZN3N6HP2GG3ZPPBW7JZ"></div>
 					<script src="//embed.typeform.com/next/embed.js"></script>
@@ -217,7 +228,7 @@
 		</ul>
 		<p>&copy;2024 Antonin Biron | LéoNoël | All Rights Reserved</p>
 	</footer>
-	
+
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 	<script src="script.js"></script>
