tree icons href

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 			<p id="subtitle">Eveillez la magie de Noël pièce par pièce !</p>
 		</div>
 	</div>
-	<div class="down-arrow-to-products">
-		<i class="fas fa-tree down-arrow__icon" id="down-arrow-to-products"></i>
+	<div class="down-arrow-to-products" >
+		<a href="#products"><i class="fas fa-tree down-arrow__icon" id="down-arrow-to-products"></i></a>
 	</div>
 	<div class="products" id="products">
 		<div class="products-title">
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 		<div class="down-arrow-to-team">
-			<i class="fas fa-tree down-arrow__icon-to-team" id="down-arrow-to-team"></i>
+			<a href="#team"><i class="fas fa-tree down-arrow__icon-to-team" id="down-arrow-to-team"></i></a>
 		</div>
 	</div>
 	<div class="team" id="team">
@@ -155,7 +155,7 @@
 			</div>
 		</div>
 		<div class="down-arrow-to-history">
-			<i class="fas fa-tree down-arrow__icon-to-history" id="down-arrow-to-history"></i>
+			<a href="#history"><i class="fas fa-tree down-arrow__icon-to-history" id="down-arrow-to-history"></i></a>
 		</div>
 	</div>
 	<div class="history" id="history">
