--- a/index.html
+++ b/index.html
@@ -39,8 +39,62 @@
 			<p id="subtitle">Eveillez la magie de Noël pièce par pièce !</p>
 		</div>
 	</div>
-	<div class="down-arrow-to-products" >
+	<div class="down-arrow-to-products">
 		<a href="#products"><i class="fas fa-tree down-arrow__icon" id="down-arrow-to-products"></i></a>
+	</div>
+	<div class="preorderform">
+
+		<div class="container">
+			<div id="welcomePage" class="page">
+				<h1>Bienvenue !</h1>
+				<button onclick="startForm()">Commencer</button>
+			</div>
+	
+			<div id="formPage" class="page hidden">
+				<form id="preorderForm">
+					<div class="question visible" id="firstQuestion">
+						<label for="firstName">Quel est votre prénom ?<span>*</span></label>
+						<input type="text" id="firstName" required>
+					</div>
+			
+					<div class="question hidden">
+						<label for="lastName">Quel est votre nom de famille ?<span>*</span></label>
+						<input type="text" id="lastName" required>
+					</div>
+			
+					<div class="question hidden">
+						<label for="email">Quelle est votre adresse e-mail ?<span>*</span></label>
+						<input type="email" id="email" required>
+						<p>Nous pourrons revenir vers vous pour la suite.</p>
+					</div>
+			
+					<div class="question hidden" id="lastQuestion">
+						<label for="quantity">Combien de sapins souhaitez-vous précommander ?<span>*</span></label>
+						<select id="quantity" required>
+							<option value="1">1 - 19,99€</option>
+							<option value="2">2 - 39,98€</option>
+							<option value="3">3 - 59,97€</option>
+						</select>
+						<p>Le prix est de 19,99 €/unité.</p>
+					</div>
+			
+					<div class="question hidden">
+						<label for="postalCode">Quel est votre code postal ?<span>*</span></label>
+						<input type="text" id="postalCode" pattern="[0-9]{5}" required>
+					</div>
+			
+					<div class="navigation">
+						<button type="button" onclick="previousQuestion()">Précédent</button>
+						<button id="continueButton" type="button" onclick="nextQuestion()">Continuer</button>
+						<button id="submitButton" type="submit" class="hidden" >Submit</button>
+					</div>                
+				</form>
+			</div>
+			
+			<div id="confirmationPage" class="page hidden">
+				<h2>Merci ! Votre précommande a été envoyée avec succès.</h2>
+			</div>
+		</div>
 	</div>
 	<div class="products" id="products">
 		<div class="products-title">
@@ -51,12 +105,11 @@
 				<img src="./img/product_tree.png" class="img_product" alt="">
 				<div id="popup" class="popup">
 					<span class="close" onclick="closePopup()">&times;</span>
-					<div class="sketchfab-embed-wrapper"> 
-						<iframe title="ChristmasTree" frameborder="0" allowfullscreen
-							mozallowfullscreen="true" webkitallowfullscreen="true"
-							allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
-							execution-while-out-of-viewport execution-while-not-rendered web-share
-							src="https://sketchfab.com/models/11e6289058a74dc4951ce481c0c31314/embed"> 
+					<div class="sketchfab-embed-wrapper">
+						<iframe title="ChristmasTree" frameborder="0" allowfullscreen mozallowfullscreen="true"
+							webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking"
+							xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share
+							src="https://sketchfab.com/models/11e6289058a74dc4951ce481c0c31314/embed">
 						</iframe>
 					</div>
 				</div>
@@ -178,6 +231,7 @@
 	<div class="contacts">
 		<div class="contacts-title"></div>
 	</div>
+	
 	<footer class="footer" id="footer">
 		<div class="social">
 			<div class="social-leonie">
@@ -231,7 +285,10 @@
 
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+	<script src="config.js"></script>
 	<script src="script.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 
 </html>
