change citation raph

--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
 							tant qu'associé, il incarne l'excellence discrète qui donne à notre équipe une longueur
 							d'avance. Confiez-lui vos projets et découvrez la puissance de la discrétion alliée à un
 							professionnalisme inégalé. </p>
-						<h3>« La folie, c’est de faire toujours la même chose et de s’attendre à un résultat
-							différent »Albert Einstein</h3>
+						<h3>«Ce n'est pas d'où vous venez qui compte, mais où vous allez »Ella Fitzgeralg</h3>
 					</div>
 				</section>
 			</div>
