cross to close form

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	<div class="preorder-form" id="preorder-form">
 
 		<div class="container">
+			<span class="close" onclick="closeForm()">&times;</span>
 			<div id="welcomePage" class="page">
 				<h1>Bienvenue !</h1>
 				<button id="startButton" onclick="startForm()">Commencer</button>
